Changelog
=========

0.2.0 (xxxx-xx-xx) - IN DEVELOPMENT
-----------------------------------

* Upgraded to django-bootstrap-ui 0.5
* Moved copyright year for better readability
* Added Wagtail 1.10 support
* Removed Wagtail 1.9 support
* Removed Django 1.9 support
* Removed Python 3.3 support

0.1.0 (2017-04-22)
------------------

* Implemented Clean Blog app
* Implemented Business Casual app
* Added Wagtail 1.9 support
* Added Django 1.10 support
* Removed Wagtail 1.2 support
* Removed Django 1.7 support


0.0.2 (2015-12-14)
------------------

* Optimized automated pypi deployment
* Added Django 1.9 support


0.0.1 (2015-12-14)
------------------

* Initial release
* Test automated pypi deployment
* Added Wagtail 1.2 support
* Added Django 1.7 support
* Added Django 1.8 support