@@ -6,25 +6,23 @@ sudo: false
 # Test environments
 matrix:
   include:
-    - env: TOXENV=py27-dj18-wt19
+    - env: TOXENV=py27-dj18-wt110
       python: 2.7
-    - env: TOXENV=py33-dj18-wt19
-      python: 3.3
-    - env: TOXENV=py34-dj18-wt19
+    - env: TOXENV=py34-dj18-wt110
       python: 3.4
-    - env: TOXENV=py35-dj18-wt19
+    - env: TOXENV=py35-dj18-wt110
       python: 3.5
-    - env: TOXENV=py27-dj19-wt19
+    - env: TOXENV=py27-dj110-wt110
       python: 2.7
-    - env: TOXENV=py34-dj19-wt19
+    - env: TOXENV=py34-dj110-wt110
       python: 3.4
-    - env: TOXENV=py35-dj19-wt19
+    - env: TOXENV=py35-dj110-wt110
       python: 3.5
-    - env: TOXENV=py27-dj110-wt19
+    - env: TOXENV=py27-dj111-wt110
       python: 2.7
-    - env: TOXENV=py34-dj110-wt19
+    - env: TOXENV=py34-dj111-wt110
       python: 3.4
-    - env: TOXENV=py35-dj110-wt19
+    - env: TOXENV=py35-dj111-wt110
       python: 3.5
     - env: TOXENV=flake8
 
