@@ -2,7 +2,7 @@
 skipsdist = True
 usedevelop = True
 
-envlist = py{27,34,35}-dj{18,110}-wt{110}, flake8
+envlist = py{27,34,35}-dj{18,110,111}-wt{110}, flake8
 
 [flake8]
 exclude = texsite/*/migrations/*
@@ -21,6 +21,7 @@ basepython =
 deps =
     dj18: Django>=1.8.1,<1.9
     dj110: Django>=1.10,<1.11
+    dj111: Django>=1.11,<1.12
 
     wt110: wagtail>=1.10,<1.11
 
