@@ -7,6 +7,7 @@ Changelog
 * Upgraded to django-bootstrap-ui 0.5
 * Moved copyright year for better readability
 * Added Wagtail 1.10 support
+* Added Django 1.11 support
 * Removed Wagtail 1.9 support
 * Removed Django 1.9 support
 * Removed Python 3.3 support
